--- a/checkpoint3.ipynb
+++ b/checkpoint3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "1115a11d",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "3948201c",
    "metadata": {},
    "outputs": [
@@ -44,14 +44,16 @@
     "    (3, False),\n",
     "    (0, True),\n",
     "    (-2, True),\n",
-    "    (-3, False)])\n",
+    "    (-3, False),\n",
+    "    (0.5, False),\n",
+    "    (4.0, True)])\n",
     "def test_is_even(number, expected):\n",
     "    assert is_even(number) == expected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "ed583df2",
    "metadata": {},
    "outputs": [
@@ -59,20 +61,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts =============================\u001b[0m\n",
-      "platform win32 -- Python 3.13.3, pytest-9.0.1, pluggy-1.6.0 -- C:\\Users\\DestWish\\AppData\\Local\\Programs\\Python\\Python313\\python.exe\n",
+      "\u001b]9;4;3;\u001b\\\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.11.0, pytest-9.0.1, pluggy-1.6.0 -- /Users/destwish/.pyenv/versions/3.11.0/bin/python3.11\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: c:\\Users\\DestWish\\Desktop\\колледж\\teating\n",
-      "plugins: sugar-1.1.1\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 5 items\n",
+      "rootdir: /Users/destwish/Desktop/tests/testing\n",
+      "plugins: allure-pytest-2.15.0\n",
+      "collected 7 items                                                              \u001b[0m\n",
       "\n",
-      "test_is_even.py::test_is_even[2-True] \u001b[32mPASSED\u001b[0m\u001b[32m                             [ 20%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[3-False] \u001b[32mPASSED\u001b[0m\u001b[32m                            [ 40%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[0-True] \u001b[32mPASSED\u001b[0m\u001b[32m                             [ 60%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[-2-True] \u001b[32mPASSED\u001b[0m\u001b[32m                            [ 80%]\u001b[0m\n",
-      "test_is_even.py::test_is_even[-3-False] \u001b[32mPASSED\u001b[0m\u001b[32m                           [100%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[2-True] \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                             [ 14%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[3-False] \u001b]9;4;1;14\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                            [ 28%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[0-True] \u001b]9;4;1;28\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                             [ 42%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[-2-True] \u001b]9;4;1;42\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                            [ 57%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[-3-False] \u001b]9;4;1;57\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                           [ 71%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[0.5-False] \u001b]9;4;1;71\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                          [ 85%]\u001b[0m\n",
+      "test_is_even.py::test_is_even[4.0-True] \u001b]9;4;1;85\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                           [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m5 passed\u001b[0m\u001b[32m in 0.02s\u001b[0m\u001b[32m ==============================\u001b[0m\n"
+      "\u001b[32m============================== \u001b[32m\u001b[1m7 passed\u001b[0m\u001b[32m in 0.01s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
      ]
     }
    ],
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "619ef994",
    "metadata": {},
    "outputs": [
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "1b5632bb",
    "metadata": {},
    "outputs": [
@@ -110,7 +114,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing test_calculate_area.py\n"
+      "Overwriting test_calculate_area.py\n"
      ]
     }
    ],
@@ -123,14 +127,16 @@
     "    (0, 5, 0),\n",
     "    (4, 4, 16),\n",
     "    (7, 2, 14),\n",
-    "    (5, 0, 0)])\n",
+    "    (5, 0, 0),\n",
+    "    (3,-3, 9),\n",
+    "    (0.5, 10, 5.0)])\n",
     "def test_calculate_area(length, width, expected):\n",
     "    assert calculate_area(length, width) == expected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "4b278c11",
    "metadata": {},
    "outputs": [
@@ -138,20 +144,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m============================= test session starts =============================\u001b[0m\n",
-      "platform win32 -- Python 3.13.3, pytest-9.0.1, pluggy-1.6.0 -- C:\\Users\\DestWish\\AppData\\Local\\Programs\\Python\\Python313\\python.exe\n",
+      "\u001b]9;4;3;\u001b\\\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform darwin -- Python 3.11.0, pytest-9.0.1, pluggy-1.6.0 -- /Users/destwish/.pyenv/versions/3.11.0/bin/python3.11\n",
       "cachedir: .pytest_cache\n",
-      "rootdir: c:\\Users\\DestWish\\Desktop\\колледж\\teating\n",
-      "plugins: sugar-1.1.1\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 5 items\n",
+      "rootdir: /Users/destwish/Desktop/tests/testing\n",
+      "plugins: allure-pytest-2.15.0\n",
+      "collected 7 items                                                              \u001b[0m\n",
       "\n",
-      "test_calculate_area.py::test_calculate_area[2-3-6] \u001b[32mPASSED\u001b[0m\u001b[32m                [ 20%]\u001b[0m\n",
-      "test_calculate_area.py::test_calculate_area[0-5-0] \u001b[32mPASSED\u001b[0m\u001b[32m                [ 40%]\u001b[0m\n",
-      "test_calculate_area.py::test_calculate_area[4-4-16] \u001b[32mPASSED\u001b[0m\u001b[32m               [ 60%]\u001b[0m\n",
-      "test_calculate_area.py::test_calculate_area[7-2-14] \u001b[32mPASSED\u001b[0m\u001b[32m               [ 80%]\u001b[0m\n",
-      "test_calculate_area.py::test_calculate_area[5-0-0] \u001b[32mPASSED\u001b[0m\u001b[32m                [100%]\u001b[0m\n",
+      "test_calculate_area.py::test_calculate_area[2-3-6] \u001b]9;4;1;0\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                [ 14%]\u001b[0m\n",
+      "test_calculate_area.py::test_calculate_area[0-5-0] \u001b]9;4;1;14\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                [ 28%]\u001b[0m\n",
+      "test_calculate_area.py::test_calculate_area[4-4-16] \u001b]9;4;1;28\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m               [ 42%]\u001b[0m\n",
+      "test_calculate_area.py::test_calculate_area[7-2-14] \u001b]9;4;1;42\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m               [ 57%]\u001b[0m\n",
+      "test_calculate_area.py::test_calculate_area[5-0-0] \u001b]9;4;1;57\u001b\\\u001b[32mPASSED\u001b[0m\u001b[32m                [ 71%]\u001b[0m\n",
+      "test_calculate_area.py::test_calculate_area[3--3-9] \u001b]9;4;2;71\u001b\\\u001b[31mFAILED\u001b[0m\u001b[31m               [ 85%]\u001b[0m\n",
+      "test_calculate_area.py::test_calculate_area[0.5-10-5.0] \u001b]9;4;2;85\u001b\\\u001b[32mPASSED\u001b[0m\u001b[31m           [100%]\u001b[0m\u001b]9;4;0;\u001b\\\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m5 passed\u001b[0m\u001b[32m in 0.02s\u001b[0m\u001b[32m ==============================\u001b[0m\n"
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m_________________________ test_calculate_area[3--3-9] __________________________\u001b[0m\n",
+      "\n",
+      "length = 3, width = -3, expected = 9\n",
+      "\n",
+      "    \u001b[0m\u001b[37m@pytest\u001b[39;49;00m.mark.parametrize(\u001b[33m\"\u001b[39;49;00m\u001b[33mlength, width, expected\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m, [\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m2\u001b[39;49;00m, \u001b[94m3\u001b[39;49;00m, \u001b[94m6\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m0\u001b[39;49;00m, \u001b[94m5\u001b[39;49;00m, \u001b[94m0\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m4\u001b[39;49;00m, \u001b[94m4\u001b[39;49;00m, \u001b[94m16\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m7\u001b[39;49;00m, \u001b[94m2\u001b[39;49;00m, \u001b[94m14\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m5\u001b[39;49;00m, \u001b[94m0\u001b[39;49;00m, \u001b[94m0\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m3\u001b[39;49;00m,-\u001b[94m3\u001b[39;49;00m, \u001b[94m9\u001b[39;49;00m),\u001b[90m\u001b[39;49;00m\n",
+      "        (\u001b[94m0.5\u001b[39;49;00m, \u001b[94m10\u001b[39;49;00m, \u001b[94m5.0\u001b[39;49;00m)])\u001b[90m\u001b[39;49;00m\n",
+      "    \u001b[94mdef\u001b[39;49;00m\u001b[90m \u001b[39;49;00m\u001b[92mtest_calculate_area\u001b[39;49;00m(length, width, expected):\u001b[90m\u001b[39;49;00m\n",
+      ">       \u001b[94massert\u001b[39;49;00m calculate_area(length, width) == expected\u001b[90m\u001b[39;49;00m\n",
+      "\u001b[1m\u001b[31mE       assert -9 == 9\u001b[0m\n",
+      "\u001b[1m\u001b[31mE        +  where -9 = calculate_area(3, -3)\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31mtest_calculate_area.py\u001b[0m:12: AssertionError\n",
+      "\u001b[36m\u001b[1m=========================== short test summary info ============================\u001b[0m\n",
+      "\u001b[31mFAILED\u001b[0m test_calculate_area.py::\u001b[1mtest_calculate_area[3--3-9]\u001b[0m - assert -9 == 9\n",
+      "\u001b[31m========================= \u001b[31m\u001b[1m1 failed\u001b[0m, \u001b[32m6 passed\u001b[0m\u001b[31m in 0.03s\u001b[0m\u001b[31m ==========================\u001b[0m\n"
      ]
     }
    ],
